Code fix of all stylesheets to overflow the page

--- a/src/app/bills/amount/amount.component.scss
+++ b/src/app/bills/amount/amount.component.scss
@@ -3,15 +3,15 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 250px;
-    height: 250px;
+    width: 230px;
+    height: 230px;
     border-radius: 50%;
     border: 4px solid #5DB075;
     border-width: 4px;
     box-sizing: border-box;
 
     .amount {
-        font-size: 2.5em;
+        font-size: 2em;
         font-weight: 400;
         color: red;
         padding: 10px;
