--- a/src/app/shared/create-button/create-button.component.scss
+++ b/src/app/shared/create-button/create-button.component.scss
@@ -1,16 +1,4 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  div {
-    flex: 1;
-  }
-  
-  .plus-button {
+.plus-button {
     position: fixed;
     bottom: 70px;
     right: 10px;
@@ -23,10 +11,11 @@ body {
     font-size: 24px;
     cursor: pointer;
     outline: none;
+    opacity: 0.5;
     z-index: 9999;
   
     &:hover {
       background-color: #0d7c1a;
     }
-  }
+}
   
