--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,16 +4,6 @@
     align-items: center;
     padding: 10px;
     color: #000;
-  
-    button {
-      align-items: center;
-      color: #5DB075;
-      border-radius: 10px;
-      width: 15%;
-      &:hover {
-        background-color: #fff;
-      }
-    }
 
     h2 {
       font-size: 2.5em;
